--- a/src/gelpers/DESCRIPTION
+++ b/src/gelpers/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: gelpers
 Title: gCNV Helpers
 Version: 0.0.0.9000
-Authors@R: 
+Authors@R:
     person("Justin", "Lim", , "jlim21@mgh.harvard.edu", role = c("aut", "cre"))
 Description: Analysis package for the gCNV pipeline.
 Depends:
@@ -17,3 +17,4 @@ Imports:
 License: GPL (>= 3)
 Encoding: UTF-8
 RoxygenNote: 7.3.2
+Suggests: tinytest
