rename RD plotting workflows
Plot CNV evidence seems more appropriate than plot RD.

--- a/.github/.dockstore.yml
+++ b/.github/.dockstore.yml
@@ -9,9 +9,9 @@ workflows:
       tags:
         - /.*/
 
-  - name: PlotRD
+  - name: PlotCNVEvidence
     subclass: WDL
-    primaryDescriptorPath: /wdl/PlotRD.wdl
+    primaryDescriptorPath: /wdl/PlotCNVEvidence.wdl
     filters:
       branches:
         - main
