add logging functions

--- a/src/gelpers/NAMESPACE
+++ b/src/gelpers/NAMESPACE
@@ -12,6 +12,9 @@ export(expand_region_by_bins)
 export(get_batch_dcr)
 export(get_samples_dcr)
 export(gregion)
+export(log_error)
+export(log_info)
+export(log_warn)
 export(read_callset)
 export(read_dcr_list)
 export(read_gcnv_bins)
