add function to get trio dCR to gelpers

--- a/src/gelpers/NAMESPACE
+++ b/src/gelpers/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(df_to_gr,data.frame)
 S3method(get_batch_dcr,gregion)
 S3method(get_samples_dcr,gregion)
+S3method(get_trio_dcr,gregion)
 S3method(print,gregion)
 S3method(to_string,gregion)
 export(GBins)
@@ -11,6 +12,7 @@ export(expandRangesByBins)
 export(expand_region_by_bins)
 export(get_batch_dcr)
 export(get_samples_dcr)
+export(get_trio_dcr)
 export(gregion)
 export(log_error)
 export(log_info)
