--- a/src/gelpers/NAMESPACE
+++ b/src/gelpers/NAMESPACE
@@ -7,6 +7,7 @@ S3method(get_trio_dcr,gregion)
 S3method(print,gregion)
 S3method(to_string,gregion)
 export(GBins)
+export(cnvCoverage)
 export(df_to_gr)
 export(expandRangesByBins)
 export(expand_region_by_bins)
