add GRanges prefix methods
Add methods for adding and removing prefixes from the sequence names of
GRanges objects.

--- a/src/gelpers/NAMESPACE
+++ b/src/gelpers/NAMESPACE
@@ -7,6 +7,7 @@ S3method(get_trio_dcr,gregion)
 S3method(print,gregion)
 S3method(to_string,gregion)
 export(GBins)
+export(addPrefix)
 export(cnvCoverage)
 export(df_to_gr)
 export(expandRangesByBins)
@@ -22,6 +23,7 @@ export(read_callset)
 export(read_dcr_list)
 export(read_gcnv_bins)
 export(read_pedigree)
+export(rmPrefix)
 export(toBinSpace)
 export(to_string)
 import(assertify)
