add data.table dependency

--- a/src/gelpers/NAMESPACE
+++ b/src/gelpers/NAMESPACE
@@ -27,5 +27,6 @@ export(rmPrefix)
 export(toBinSpace)
 export(to_string)
 import(assertify)
+import(data.table)
 import(methods)
 importClassesFrom(GenomicRanges,GRanges)
