--- a/src/gelpers/DESCRIPTION
+++ b/src/gelpers/DESCRIPTION
@@ -5,6 +5,7 @@ Authors@R:
     person("Justin", "Lim", , "jlim21@mgh.harvard.edu", role = c("aut", "cre"))
 Description: Analysis package for the gCNV pipeline.
 Depends:
+    data.table (>= 1.16.0),
     methods,
     R (>= 4.0.0)
 Imports:
