Update Dockstore config with CheckSex

--- a/.github/.dockstore.yml
+++ b/.github/.dockstore.yml
@@ -35,3 +35,12 @@ workflows:
         - main
       tags:
         - /.*/
+
+  - name: CheckSex
+    subclass: WDL
+    primaryDescriptorPath: /wdl/CheckSex.wdl
+    filters:
+      branches:
+        - main
+      tags:
+        - /.*/
