Add generic CNV plotting workflow

--- a/.github/.dockstore.yml
+++ b/.github/.dockstore.yml
@@ -53,3 +53,12 @@ workflows:
         - main
       tags:
         - /.*/
+
+  - name: PlotCnvEvidence
+    subclass: WDL
+    primaryDescriptorPath: /wdl/PlotCnvEvidence.wdl
+    filters:
+      branches:
+        - main
+      tags:
+        - /.*/
