--- a/.github/.dockstore.yml
+++ b/.github/.dockstore.yml
@@ -54,9 +54,9 @@ workflows:
       tags:
         - /.*/
 
-  - name: PlotCnvEvidence
+  - name: PlotCNVEvidence
     subclass: WDL
-    primaryDescriptorPath: /wdl/PlotCnvEvidence.wdl
+    primaryDescriptorPath: /wdl/PlotCNVEvidence.wdl
     filters:
       branches:
         - main
